# higher-ranked-lifetime-demo

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cmd/: forward.rs  reverse.rs
src/proxy/: chain.rs  mod.rs
src/proxy/handlers/: log.rs
