[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
anyhow = "1.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
rustls = { version = "0.23.20", features = ["ring"] }

hudsucker = "0.23"
hyper-util = "0.1"
axum = "0.8"

tokio = { version = "1.4", features = ["macros", "rt", "rt-multi-thread"] }
hyper = "1.6"
http = "1.2"